# fedi_auto_delete

./: README.md  deleteit.py  pyproject.toml
